--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>FizzBuzzer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
 </project>
